work in progress...

--- a/Destini-iOS13/View/Base.lproj/Main.storyboard
+++ b/Destini-iOS13/View/Base.lproj/Main.storyboard
@@ -16,9 +16,75 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="HJ5-Xj-hvg" userLabel="BackgroundImage">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="lhK-1f-b6b">
+                                <rect key="frame" x="20" y="0.0" width="335" height="667"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="03t-SU-Iuz" userLabel="TextLabel">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="427"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Shh-DH-BMJ" userLabel="Choise1">
+                                        <rect key="frame" x="0.0" y="447" width="335" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="hpb-E0-HFO"/>
+                                        </constraints>
+                                        <state key="normal" title="Button" backgroundImage="choice1Background">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="choiseMade:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2Df-Ke-yMG"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ukR-Wg-cDo" userLabel="Choise2">
+                                        <rect key="frame" x="0.0" y="567" width="335" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="glB-6x-d9Z"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Button" backgroundImage="choice2Background">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="choiseMade:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FIL-mr-xzx"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="ukR-Wg-cDo" firstAttribute="leading" secondItem="lhK-1f-b6b" secondAttribute="leading" id="6S7-ro-5fV"/>
+                                    <constraint firstItem="03t-SU-Iuz" firstAttribute="top" secondItem="lhK-1f-b6b" secondAttribute="top" id="U3t-iF-aIn"/>
+                                    <constraint firstAttribute="trailing" secondItem="03t-SU-Iuz" secondAttribute="trailing" id="byQ-fN-LJv"/>
+                                    <constraint firstItem="03t-SU-Iuz" firstAttribute="leading" secondItem="lhK-1f-b6b" secondAttribute="leading" id="cdL-tu-bLm"/>
+                                    <constraint firstItem="Shh-DH-BMJ" firstAttribute="top" secondItem="03t-SU-Iuz" secondAttribute="bottom" constant="20" id="n67-tM-NfV"/>
+                                    <constraint firstItem="ukR-Wg-cDo" firstAttribute="top" secondItem="Shh-DH-BMJ" secondAttribute="bottom" constant="20" id="sqc-11-Prh"/>
+                                    <constraint firstAttribute="trailing" secondItem="ukR-Wg-cDo" secondAttribute="trailing" id="yT7-jK-OTL"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="lhK-1f-b6b" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="PNd-SY-nle"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lhK-1f-b6b" secondAttribute="trailing" constant="20" id="SWk-YU-Haq"/>
+                            <constraint firstAttribute="trailing" secondItem="HJ5-Xj-hvg" secondAttribute="trailing" id="b3t-5m-CF3"/>
+                            <constraint firstItem="lhK-1f-b6b" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="dXC-Fv-AV6"/>
+                            <constraint firstItem="HJ5-Xj-hvg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="fEr-4x-93M"/>
+                            <constraint firstItem="HJ5-Xj-hvg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="gMP-4V-C48"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="HJ5-Xj-hvg" secondAttribute="bottom" id="iwY-o3-g5V"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="lhK-1f-b6b" secondAttribute="bottom" id="ojB-YE-YIq"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="backgroundImage" destination="HJ5-Xj-hvg" id="FHU-97-Tpv"/>
+                        <outlet property="buttonChoise1" destination="Shh-DH-BMJ" id="hjq-zs-AB1"/>
+                        <outlet property="buttonChoise2" destination="ukR-Wg-cDo" id="JtI-a8-tfm"/>
+                        <outlet property="textLabel" destination="03t-SU-Iuz" id="Rxj-Mb-cpf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -26,6 +92,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="background" width="958" height="1793"/>
+        <image name="choice1Background" width="1370.5" height="363"/>
+        <image name="choice2Background" width="1370.5" height="363"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
